# fluttertpc_video_compress

./: .gitignore  COMMITTERS.md  OAT.xml  README.OpenHarmony.md  README.OpenHarmony_CN.md  README.OpenSource  README_OpenHarmony.md  pubspec.yaml
android/: build.gradle
example/: .metadata  pubspec.yaml
example/lib/: main.dart
example/ohos/: build-profile.json5  hvigorfile.ts  oh-package.json5
example/ohos/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
example/ohos/entry/src/main/: module.json5
example/ohos/entry/src/main/ets/entryability/: EntryAbility.ets
example/ohos/entry/src/main/ets/pages/: Index.ets
example/ohos/entry/src/main/ets/plugins/: GeneratedPluginRegistrant.ets
example/ohos/entry/src/ohosTest/: module.json5
example/ohos/entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
example/ohos/entry/src/ohosTest/ets/testability/: TestAbility.ets
example/ohos/entry/src/ohosTest/ets/testability/pages/: Index.ets
example/ohos/entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ts
ohos/: build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5
ohos/src/main/: module.json5
ohos/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos/src/main/cpp/types/libvideocompress/: Index.d.ts  oh-package.json5
ohos/src/main/ets/dev/fluttercommunity/video_compress/: Const.ets  Utility.ets  VideoCompress.ets  VideoCompressPlugin.ets
ohos/src/mock/: Libvideocompress.mock.ets  mock-config.json5
